Add chatbot feature

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,11 +19,14 @@
     --maya-blue: #6BBBF7;
     --night: #0C0D0E;
     --onyx: #3B4045;
-    --orange-wheel: #f48225;
+    --orange-wheel: #F48225;
+    --peach: #F6BE8F;
     --platinum: #E3E6E8;
     --poppy: #D0393E;
     --sea-salt: #F8F9F9;
+    --sky-blue: #6DD5ED;
     --slate-gray: #6A737C;
+    --snow: #F7EFEF;
     --UCLA-blue: #39739D;
     --uranian-blue: #A0C8E4;
     --white: #FFF;
