--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,9 @@
     --air-superiority-blue: #7AA7C7;
     --alice-blue: #E1ECF4;
     --anti-flash-white: #F1F2F3;
+    --battleship-gray: #909090;
     --black: #000;
+    --bronze: #CD7F32;
     --cadet-gray: #9FA6AD;
     --columbia-blue: #B3D3EA;
     --corn-silk: #FBF3D5;
@@ -13,23 +15,30 @@
     --eerie-black: #232629;
     --french-blue: #0074CC;
     --french-gray: #BABFC4;
+    --gold: #FFD700;
+    --green: #0F0;
     --green-blue: #0063BF;
     --indian-red: #DE4F54;
     --lapis-lazuli: #2C5877;
     --maya-blue: #6BBBF7;
     --night: #0C0D0E;
+    --nyanza: #E0FCE0;
     --onyx: #3B4045;
     --orange-wheel: #F48225;
     --peach: #F6BE8F;
     --platinum: #E3E6E8;
     --poppy: #D0393E;
+    --saffron: #E0BD00;
     --sea-salt: #F8F9F9;
+    --SGBUS-green: #00E000;
+    --silver: #C0C0C0;
     --sky-blue: #6DD5ED;
     --slate-gray: #6A737C;
     --snow: #F7EFEF;
     --UCLA-blue: #39739D;
     --uranian-blue: #A0C8E4;
     --white: #FFF;
+    --xanthous: #FFC146;
 }
 
 *,
