--- a/client/src/components/sidenavbar/sidenavbar.css
+++ b/client/src/components/sidenavbar/sidenavbar.css
@@ -89,6 +89,7 @@
         position: fixed;
         top: var(--header-height);
         left: 0;
+        z-index: 3;
     }
 
     #side-navbar .links-container {
