--- a/client/src/pages/users/components/profilebody/profilebody.css
+++ b/client/src/pages/users/components/profilebody/profilebody.css
@@ -29,6 +29,7 @@
     align-items: flex-start;
     color: var(--slate-gray);
     min-height: 1rem;
+    min-width: 12.5rem;
     padding: 0.75rem;
     border: 1px solid rgb(214, 217, 220);
     border-radius: 0.3125rem;
@@ -60,6 +61,10 @@
 
 .tags-about-section #user-about .content:not(.truncate-overflow)+.btn-container {
     display: none;
+}
+
+.tags-about-section #user-about .content>p {
+    margin: 0;
 }
 
 #user-about .btn-container .read-more {
@@ -135,15 +140,9 @@
 }
 
 @media (max-width: 980px) {
-    #user-profile .profile-body {
-        flex-direction: column;
-        gap: 1.5rem;
-    }
-
     .profile-body .tags-about-section {
-        gap: 1.5rem;
+        column-gap: 1.5rem;
         min-height: 10.5rem;
-        margin-bottom: 1.5rem;
     }
 
     .profile-body .child-container {
@@ -155,21 +154,14 @@
     }
 }
 
-@media (max-width: 640px) {
-    #user-profile .profile-body {
+@media (max-width: 560px) or ((min-width: 641px) and (max-width: 800px)) {
+    .profile-body .tags-about-section {
         flex-direction: column;
-        gap: 1.5rem;
     }
+}
 
-    .profile-body .child-container {
-        margin: 0;
-    }
-
+@media (max-width: 640px) {
     .profile-body .child-container .title {
         font-size: 1.2375rem;
-    }
-
-    .tags-about-section #user-watched-tags {
-        flex-shrink: 1;
     }
 }
