--- a/client/src/components/chatterbot/botcomponents/botchatarea/botchatarea.css
+++ b/client/src/components/chatterbot/botcomponents/botchatarea/botchatarea.css
@@ -102,6 +102,7 @@
     transform: scale(0);
     transform-origin: bottom left;
     overflow: hidden;
+    word-wrap: anywhere;
     position: relative;
 }
 
